--- a/index.html
+++ b/index.html
@@ -5,139 +5,143 @@
     <title>Главная страница - Седона</title>
     <meta name="description" content="Отдых в Седоне. Спокойный отдых вдали от суеты, без скопления туристов. Тихие мотели, вскусная еда и сувениры">
     <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
-    <link rel="StyleSheet" href="#" type="text/css">
+    <link rel="stylesheet" href="#">
     <!--добавить ссылку на Стили-->
     <link rel="icon" href="#" type="image/x-icon">
     <!--добавить Фавикон-->
   </head>
   <body>
-      <header class="container">
-          <nav class="menu">
-            <a class="menu-info" href="#">Информация</a>
-            <a href="#">Фото и видео</a>
-            <a href="index.html" class="menu-logo">
-                <img src="logo.png" alt="">
-            </a><!--добавить картинку логотипа menu-logo.png-->
-            <a href="#">Карта штата</a>
-            <a href="catalog.html">Гостиницы</a>
-          </nav>
-      </header>
-      <main class="container">
-          <div class="card"><!--блок с картинкой Welcome-->
-            <p class="card-welcome">Welcome</p>
-            <p class="card-gorgeous">to the gorgeous</p>
-            <h1 class="card-sedona">Sedona</h1>
-            <p class="card-slogan">"Because the Grand Canyon sucks!"</p>
-          </div>
-          <div class="about"><!--блок с описанием седоны-->
-            <p class="about-city">Cедона — небольшой городок в аризоне, заслуживающий большего!</p>
-            <p class="about-reason">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
-          </div>
-          <div class="city"><!--блок Настоящий городок с картинкой-->
-            <div class="city-description">
-                <p class="city-description-title">Настоящий городок</p>
-                <p class="city-description-subtitle">-№1-</p>
-                <p class="city-description-about">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            </div>
-            <figure class="city-view"><!-- или лучше другой тег?? -->
-                <img src="#" alt="Седона"><!--поставить ссылку на картинку в блоке -->
-            </figure>
-          </div>
-          <div class="pluses"><!-- блок с жильем, едой, сувенирами -->
-            <div class="pluses-block pluses-housing">
-                <p class="pluses-block-title">Жилье</p>
-                <p class="pluses-block-motel">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </div>
-            <div class="pluses-block pluses-food">
-                <p class="pluses-block-title">Еда</p>
-                <p class="pluses-block-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </div>
-            <div class="pluses-block pluses-souvenirs">
-                <p class="pluses-block-title">Сувениры</p>
-                <p class="pluses-block-about">Не только китайского, но и местного производства!</p>
-            </div>
+    <header class="container">
+      <nav class="menu">
+        <a class="menu-info" href="#">Информация</a>
+        <a href="#">Фото и видео</a>
+        <a href="index.html" class="menu-logo"><img src="logo.png" alt=""></a><!--добавить картинку логотипа menu-logo.png-->
+        <a href="#">Карта штата</a>
+        <a href="catalog.html">Гостиницы</a>
+      </nav>
+    </header>
+    <main class="container">
+      <div class="card"><!--блок с картинкой Welcome-->
+        <figure class="card-welcome">
+          <img src="#" alt="Welcome">
+        </figure>
+      </div>
+      <div class="about"><!--блок с описанием седоны-->
+        <h3 class="properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
+        <h4 class="properties-gray-h4">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h4>
+      </div>
+      <div class="city"><!--блок Настоящий городок с картинкой-->
+        <div class="city-description">
+          <h3 class="properties-white-h3">Настоящий городок</h3>
+          <h4 class="properties-white-h4">-№1-</h4>
+          <h4 class="properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</h4>
         </div>
-        <div class="roсks"><!-- блок со скалами, мост дьявола -->
-            <figure class="roсks-view">
-                <img src="#" alt="Седона">
-            </figure>
-            <div class="roсks-description">
-                <p class="roсks-description-title">Там есть мост дьявола</p>
-                <p class="roсks-description-subtitle">-№2-</p>
-                <p class="roсks-description-about">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            </div>
+        <div class="city-sedona">
+          <figure class="city-view">
+            <img src="#" alt="Седона"><!--поставить ссылку на картинку в блоке -->
+          </figure>
         </div>
-        <div class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
-            <div class="pluses-block pluses-number pluses-square">
-                <p class="pluses-block-title">Небольшая площадь</p>
-                <p class="pluses-block-subtitle">-№3-</p>
-                <p class="pluses-block-about">Все достопримечательности находятся очень близко</p>
-            </div>
-            <div class="pluses-block pluses-number pluses-road">
-                <p class="pluses-block-title">Красивая дорога</p>
-                <p class="pluses-block-subtitle">-№4-</p>
-                <p class="pluses-block-about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-            <div class="pluses-block pluses-number pluses-tourist">
-                <p class="pluses-block-title">Мало туристов</p>
-                <p class="pluses-block-subtitle">-№5-</p>
-                <p class="pluses-block-about">Большинство едет в Гранд Каньон и толпится там</p>
-            </div>
+      </div>
+      <div class="pluses"><!-- блок с жильем, едой, сувенирами -->
+        <div class="pluses-block pluses-housing">
+          <h3 class="properties-black-h3">Жилье</h3>
+          <p class="pluses-block-motel properties-gray-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
+        <div class="pluses-block pluses-food">
+          <h3 class="properties-black-h3">Еда</h3>
+          <p class="pluses-block-about properties-gray-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </div>
+        <div class="pluses-block pluses-souvenirs">
+          <h3 class="properties-black-h3">Сувениры</h3>
+          <p class="pluses-block-about properties-gray-h4">Не только китайского, но и местного производства!</p>
+        </div>
+      </div>
+      <div class="roсks"><!-- блок со скалами, мост дьявола -->
+        <figure class="roсks-view">
+          <img src="#" alt="Седона">
+        </figure>
+        <div class="roсks-description">
+          <h3 class="properties-white-h3">Там есть мост дьявола</h3>
+          <h4 class="properties-white-h4">-№2-</h4>
+          <h4 class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</h4>
+        </div>
+      </div>
+      <div class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
+        <div class="pluses-block pluses-number pluses-square">
+          <h3 class="properties-black-h3">Небольшая площадь</h3>
+          <p class="pluses-block-subtitle properties-gray-h4">-№3-</p>
+          <p class="pluses-block-about properties-gray-h4">Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="pluses-block pluses-number pluses-road">
+          <h3 class="properties-black-h3">Красивая дорога</h3>
+          <p class="pluses-block-subtitle properties-gray-h4">-№4-</p>
+          <p class="pluses-block-about properties-gray-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="pluses-block pluses-number pluses-tourist">
+          <h3 class="properties-black-h3">Мало туристов</h3>
+          <p class="pluses-block-subtitle properties-gray-h4">-№5-</p>
+          <p class="pluses-block-about properties-gray-h4">Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
+      </div>
+      <div class="map"><!-- БЛОК с картой -->
+        <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
+          <img src="#" alt="Карта Седоны">
+        </figure>
+        <div class="map-screenshot">
+        </div><!-- блок с куском карты -->
+      </div>
         <!-- НАЧАЛО БЛОКА С ФОРМОЙ ПОИСКА И БРОНИ-->
-        <div class="booking">
-            <p class="booking-title">Заинтересовались?</p>
-            <p class="booking-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <div class="booking-block">
-                <a class="booking-btn" href="#">Поиск гостиницы в Седоне</a>
-                <div class="booking-form">
-                    <form method="post" action="/search"><!-- что поставить в акшен? search? -->
-                    <!-- НЕ УВЕРЕНА В ПРАВИЛЬНОСТИ ФОРМЫ! -->
-                        <div class="booking-form-dates">
-                            <div class="booking-form-row clearfix"><!-- поле ввода дата заезда, календарь -->
-                                <label class="booking-form-label" for="booking-arrive-date">Дата заезда:</label>
-                                <input type="date" id="booking-arrive-date" required>
-                            </div>
-                            <div class="booking-form-row clearfix"><!-- блок ввода дата выезда, календарь -->
-                                <label class="booking-form-label" for="booking-departure-date">Дата выезда:</label>
-                                <input type="date" id="booking-departure-date" required>
-                            </div>
-                        </div>
-                        <div class="booking-form-row clearfix">
-                            <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
-                                <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
-                                <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->
-                                <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
-                                <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
-                            </div>
-                            <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
-                                <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
-                                <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
-                                <a class="booking-controls-minus" href="#"></a><!-- кнопка дети"-" -->
-                                <a class="booking-controls-add" href="#"></a><!-- кнопка дети"+" -->
-                            </div>
-                        </div>
-                        <button class="booking-form-btn" type="submit">Найти</button>
-                    </form>
+      <div class="booking">
+        <h2 class="booking-title">Заинтересовались?</h2>
+        <p class="booking-info properties-gray-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <div class="booking-block">
+          <a class="booking-btn" href="#">
+            <h3 class="properties-white-h3">Поиск гостиницы в Седоне</h3>
+<!-- добавила <h3> или достаточно прописать еще один класс в ссылку, и нужна ли она вообще здесь (ссылка)??? -->
+          </a>
+          <div class="booking-form">
+            <form method="post" action="/search">
+            <!--   <div class="booking-form-dates"> -->
+                <div class="booking-form-row clearfix"><!-- поле ввода дата заезда, календарь -->
+                  <label class="booking-form-label" for="booking-arrive-date">Дата заезда:</label>
+                  <input type="date" id="booking-arrive-date" required>
                 </div>
-            </div>
+                <div class="booking-form-row clearfix"><!-- блок ввода дата выезда, календарь -->
+                  <label class="booking-form-label" for="booking-departure-date">Дата выезда:</label>
+                  <input type="date" id="booking-departure-date" required>
+                </div>
+             <!--  </div> -->
+              <div class="booking-form-row clearfix">
+                <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
+                  <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
+                  <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
+                  <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->                  
+                  <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
+                </div>
+                <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
+                  <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
+                  <a class="booking-controls-minus" href="#"></a><!-- кнопка дети"-" -->
+                  <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
+                  <a class="booking-controls-add" href="#"></a><!-- кнопка дети"+" -->
+                </div>
+              </div>
+              <button class="booking-form-btn" type="submit">Найти</button>
+            </form>
+          </div>
         </div>
+      </div>
         <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
-        <div class="map"><!-- БЛОК с картой -->
-            <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
-                <img src="#" alt="Карта Седоны">
-            </figure>
-            <div class="map-screenshot">
-            </div><!-- блок с куском карты -->
-        </div>
     </main>
     <footer class="container"><!-- футер - соцсети -->
-        <p class="footer-hashtag">#visitsedona</p>
-        <div class="footer-social">
-            <a class="footer-social-btn footer-social-twitter" href="#"></a>
-            <a class="footer-social-btn footer-social-facebook" href="#"></a>
-            <a class="footer-social-btn footer-social-youtube" href="#"></a>
-        </div>
+      <p class="footer-hashtag properties-black-h3">#visitsedona</p>
+      <div class="footer-social">
+        <a class="footer-social-btn footer-social-twitter" href="#"><img src="#" alt="Twitter"></a><!-- иконка твиттера png-->
+        <a class="footer-social-btn footer-social-facebook" href="#"><img src="#" alt="VKontakte"></a><!-- иконка контакта png-->
+        <a class="footer-social-btn footer-social-youtube" href="#"><img src="#" alt="YouTube"></a><!-- иконка ютуба png-->
+      </div>
+      <div class="footer-htmlacademy">
+        <img src="#" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
+      </div>
     </footer>
   </body>
 </html>
