--- a/hotels.html
+++ b/hotels.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Отели - Седоны</title>
-    <meta name="description" content="Отдых в мотелях, гостиницах, апартаментах. Бассейн, парковка, wi-fi, завтрак, все включено.">
-    <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
-    <link rel="stylesheet" href="#">
-    <!--добавить ссылку на Стили-->
-    <link rel="icon" href="#" type="image/x-icon">
-    <!--добавить Фавикон-->
+<head>
+  <meta charset="utf-8">
+  <title>Отели - Седоны</title>
+  <meta name="description" content="Отдых в мотелях, гостиницах, апартаментах. Бассейн, парковка, wi-fi, завтрак, все включено.">
+  <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
+  <link rel="stylesheet" href="css/style.css">
+  <!--добавить ссылку на Стили-->
+  <link rel="icon" href="#" type="image/x-icon">
+  <!--добавить Фавикон-->
   <body>
     <header class="container">
-      <nav class="menu">
-        <a class="menu-info" href="index.html">Информация</a>
-        <a href="#">Фото и видео</a>
-        <a href="index.html" class="menu-logo"><img src="logo.png" alt=""></a>
+      <nav class="menu properties-menu-black-h4">
+        <a class="menu-info properties-menu-black-h4" href="index.html">Информация</a>
+        <a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a>
+        <a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="logo.png" alt=""></a>
         <!--добавить картинку логотипа menu-logo.png-->
-        <a href="#">Карта штата</a>
-        <a href="hotels.html">Гостиницы</a>
+        <a class="menu-info properties-menu-black-h4" href="#">Карта штата</a>
+        <a class="menu-info properties-menu-black-h4" href="hotels.html">Гостиницы</a>
       </nav>            
     </header>
     <main class="container">
       <div class="filter clearfix">
         <form method="post" action="/">
           <div class="filter-infrastructure">
-            <p class="filter-infrastructure-title">Инфраструктура</p>
+            <h3 class="filter-infrastructure-title">Инфраструктура</h3>
             <input type="checkbox" name="filter-pool">
             <label class="filter-select" for="filter-pool">Бассейн</label>
             <input type="checkbox" name="filter-parking">
@@ -33,7 +33,7 @@
             <label class="filter-select" for="filter-wifi">Парковка</label>
           </div>
           <div class="filter-houses">
-            <p class="filter-houses-title">Жилье</p>
+            <h3 class="filter-houses-title">Тип жилья</h3>
             <input type="checkbox" name="filter-hotel">
             <label class="filter-select" for="filter-hotel">Гостиница</label>
             <input type="checkbox" name="filter-motel">
@@ -47,107 +47,108 @@
             <div class="">
              <!-- &&& -->
              <!-- &&& -->
-            </div>
-          <button class="filter-btn" type="submit">Показать
-          </button>
-          </div>
-        </form>
+           </div>
+           <button class="filter-btn" type="submit">Показать
+           </button>
+         </div>
+       </form>
+     </div>
+     <div class="search clearfix"><!-- блок с сортировкой и стреклками-->
+      <div class="search-left-size">
+        <span class="search-found properties-black-h3">Найдено: 3</span>
+        <span class="search-sorting">Сортировка:</span>
+        <a href="#" class="search-select search-price">По цене</a>
+        <a href="#" class="search-select search-type">По типу</a>
+        <a href="#" class="search-select search-rating">По рейтингу</a>
       </div>
-      <div class="search clearfix"><!-- блок с сортировкой и стреклками-->
-        <div class="search-left-size">
-          <span class="search-found properties-black-h3">Найдено: 3</span>
-          <span class="search-sorting">Сортировка:</span>
-          <a href="#" class="search-select search-price">По цене</a>
-          <a href="#" class="search-select search-type">По типу</a>
-          <a href="#" class="search-select search-rating">По рейтингу</a>
-        </div>
-        <div class="search-right-size">
-            <!-- блок со стрелками вниз/вверх -->
-          <a class="search-up" href="#"></a>
-          <a class="search-down" href="#"></a>
-        </div>
+      <div class="search-right-size">
+        <!-- блок со стрелками вниз/вверх -->
+        <a class="search-up" href="#"></a>
+        <a class="search-down" href="#"></a>
       </div>
-      <div class="found"><!--блок с найдеными результатами -->
-        <div class="found-houses clearfix">
-          <figure class="found-houses-img">
-            <img src="img/amara.jpg" alt="Amara resort & spa">
-          </figure>
-          <div class="found-houses-info">
-            <a class="founf-info-title properties-black-h3" href="#">Amara resort & spa</a>
-            <div class="found-about clearfix"><!-- начало блок с типом отеля и ценой -->
-              <div class="found-about-houses">
-                <p class="found-houses-type properties-gray-h4">Гостиница</p><!-- лучше <р> перенос на др строку или <h2> ???-->
-                <a class="found-houses-more" href="#">Подробнее</a>   
-              </div>
-              <div class="found-about-book">
-                <p class="found-about-price properties-gray-h4">от 4000 р.</p><!-- лучше <р> перенос на др строку или <h2> ???-->
-                <a class="found-houses-btn" href="#">Забронировать</a>
-              </div>          
-            </div>
-          </div>
-        </div>
-        <div class="found-houses-rating"><!-- блок с рейтингом отеля 4 звезды-->
-          <div class="found-rating-stars found-ratings-good"></div><!-- как сделать звезды??? какртинка со звездами или они меняют цвет при наведении hover и нажатии??? -->
-            <p class="found-rating-info properties-gray-h4">Рейтинг: 8,5</p>  
-        </div>
-      </div>
+    </div>
+    <div class="found"><!--блок с найдеными результатами -->
       <div class="found-houses clearfix">
         <figure class="found-houses-img">
-            <img src="img/desert.jpg" alt="Desert quail inn">
+          <img src="img/amara.jpg" alt="Amara resort & spa">
         </figure>
         <div class="found-houses-info">
-          <a class="founf-info-title properties-black-h3" href="#">Desert quail inn</a>
-          <div class="found-about clearfix">
-          <!-- начало блок с типом отеля и ценой -->
+          <a class="founf-info-title properties-black-h3" href="#">Amara resort & spa</a>
+          <div class="found-about clearfix"><!-- начало блок с типом отеля и ценой -->
             <div class="found-about-houses">
-              <p class="found-houses-type properties-gray-h4">Мотель</p><!-- лучше <р> перенос на др строку или <h2> ???-->
+              <p class="found-houses-type properties-black-h4">Гостиница</p>
               <a class="found-houses-more" href="#">Подробнее</a>   
             </div>
             <div class="found-about-book">
-              <p class="found-about-price properties-gray-h4">от 3000 р.</p><!-- лучше <р> перенос на др строку или <h2> ???-->
+              <p class="found-about-price properties-black-h4">от 4000 р.</p>
               <a class="found-houses-btn" href="#">Забронировать</a>
             </div>          
           </div>
         </div>
-        <div class="found-houses-rating"><!-- блок с рейтингом отеля 3 звезды-->
-          <div class="found-rating-stars found-ratings-notgood"></div><!-- как сделать звезды??? какртинка со звездами или они меняют цвет при наведении hover и нажатии??? -->
-            <p class="found-rating-info properties-gray-h4">Рейтинг: 8,9</p>  
-        </div>
       </div>
-      <div class="found-houses clearfix">
-        <figure class="found-houses-img">
-            <img src="img/villas.jpg" alt="Villas at poco diablo">
-        </figure>
-        <div class="found-houses-info">
-          <a class="founf-info-title properties-black-h3" href="#">Villas at poco diablo</a>
-          <div class="found-about clearfix">
+      <div class="found-houses-rating"><!-- блок с рейтингом отеля 4 звезды-->
+        <div class="found-rating-stars found-ratings-good"></div> -->
+        <p class="found-rating-info properties-black-h4">Рейтинг: 8,5</p>  
+      </div>
+    </div>
+    <div class="found-houses clearfix">
+      <figure class="found-houses-img">
+        <img src="img/desert.jpg" alt="Desert quail inn">
+      </figure>
+      <div class="found-houses-info">
+        <a class="founf-info-title properties-black-h3" href="#">Desert quail inn</a>
+        <div class="found-about clearfix">
           <!-- начало блок с типом отеля и ценой -->
-            <div class="found-about-houses">
-              <p class="found-houses-type properties-gray-h4">Апартаменты</p><!-- лучше <р> перенос на др строку или <h2> ???-->
-              <a class="found-houses-more" href="#">Подробнее</a>   
-            </div>
-            <div class="found-about-book">
-              <p class="found-about-price properties-gray-h4">от 2000 р.</p><!-- лучше <р> перенос на др строку или <h2> ???-->
-              <a class="found-houses-btn" href="#">Забронировать</a>
-            </div>          
+          <div class="found-about-houses">
+            <p class="found-houses-type properties-black-h4">Мотель</p>
+            <a class="found-houses-more" href="#">Подробнее</a>   
           </div>
+          <div class="found-about-book">
+            <p class="found-about-price properties-black-h4">от 3000 р.</p>
+            <a class="found-houses-btn" href="#">Забронировать</a>
+          </div>          
         </div>
-        <div class="found-houses-rating"><!-- блок с рейтингом отеля 2 звезды-->
-          <div class="found-rating-stars found-ratings-bad"></div><!-- как сделать звезды??? картинка со звездами или они меняют цвет при наведении hover и нажатии??? -->
-            <p class="found-rating-info properties-gray-h4">Рейтинг: 9,2</p>  
+      </div>
+      <div class="found-houses-rating"><!-- блок с рейтингом отеля 3 звезды-->
+        <div class="found-rating-stars found-ratings-notgood"></div>
+        <p class="found-rating-info properties-black-h4">Рейтинг: 8,9</p>  
+      </div>
+    </div>
+    <div class="found-houses clearfix">
+      <figure class="found-houses-img">
+        <img src="img/villas.jpg" alt="Villas at poco diablo">
+      </figure>
+      <div class="found-houses-info">
+        <a class="founf-info-title properties-black-h3" href="#">Villas at poco diablo</a>
+        <div class="found-about clearfix">
+          <!-- начало блок с типом отеля и ценой -->
+          <div class="found-about-houses">
+            <p class="found-houses-type properties-black-h4">Апартаменты</p>
+            <a class="found-houses-more" href="#">Подробнее</a>   
+          </div>
+          <div class="found-about-book">
+            <p class="found-about-price properties-black-h4">от 2000 р.</p>
+            <a class="found-houses-btn" href="#">Забронировать</a>
+          </div>          
         </div>
       </div>
-    </main>
-    <footer class="container">
-      <p class="footer-hashtag properties-black-h3">#visitsedona</p>
-      <div class="footer-social">
-        <a class="footer-social-btn footer-social-twitter" href="#"><img src="#" alt="Twitter"></a><!-- иконка твиттера png-->
-        <a class="footer-social-btn footer-social-facebook" href="#"><img src="#" alt="VKontakte"></a><!-- иконка контакта png-->
-        <a class="footer-social-btn footer-social-youtube" href="#"><img src="#" alt="YouTube"></a><!-- иконка ютуба png-->
+      <div class="found-houses-rating"><!-- блок с рейтингом отеля 2 звезды-->
+        <div class="found-rating-stars found-ratings-bad"></div><!-- как сделать звезды??? картинка со звездами или они меняют цвет при наведении hover и нажатии??? -->
+        <p class="found-rating-info properties-black-h4">Рейтинг: 9,2</p>  
       </div>
-      <div class="footer-htmlacademy">
-        <img src="#" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
-      </div>
-    </footer>  
-  </body>
+    </div>
+  </main>
+  <footer class="container">
+    <p class="footer-hashtag properties-black-h3">#visitsedona</p>
+    <div class="footer-social">
+    <a class="footer-social-btn footer-social-twitter" href="#">Твиттер</a><!-- иконка твиттера png-->
+      <a class="footer-social-btn footer-social-facebook" href="#">ВКонтакте</a><!-- иконка контакта png-->
+      <a class="footer-social-btn footer-social-youtube" href="#">Ютуб</a><!-- иконка ютуба png-->
+    </div>
+    <div class="footer-htmlacademy">
+      <span class="footer-website-by">Website by</span>
+      <img src="img/html-academy.png" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
+    </div>
+  </footer>  
+</body>
 </html>
