--- a/index.html
+++ b/index.html
@@ -1,147 +1,149 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Главная страница - Седона</title>
-    <meta name="description" content="Отдых в Седоне. Спокойный отдых вдали от суеты, без скопления туристов. Тихие мотели, вскусная еда и сувениры">
-    <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
-    <link rel="stylesheet" href="#">
-    <!--добавить ссылку на Стили-->
-    <link rel="icon" href="#" type="image/x-icon">
-    <!--добавить Фавикон-->
-  </head>
-  <body>
-    <header class="container">
-      <nav class="menu">
-        <a class="menu-info" href="#">Информация</a>
-        <a href="#">Фото и видео</a>
-        <a href="index.html" class="menu-logo"><img src="logo.png" alt=""></a><!--добавить картинку логотипа menu-logo.png-->
-        <a href="#">Карта штата</a>
-        <a href="catalog.html">Гостиницы</a>
-      </nav>
-    </header>
-    <main class="container">
-      <div class="card"><!--блок с картинкой Welcome-->
-        <figure class="card-welcome">
-          <img src="#" alt="Welcome">
+<head>
+  <meta charset="utf-8">
+  <title>Главная страница - Седона</title>
+  <meta name="description" content="Отдых в Седоне. Спокойный отдых вдали от суеты, без скопления туристов. Тихие мотели, вскусная еда и сувениры">
+  <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
+  <link rel="stylesheet" href="css/style.css">
+  <!--добавить ссылку на Стили-->
+  <link rel="icon" href="#" type="image/x-icon">
+  <!--добавить Фавикон-->
+</head>
+<body>
+  <header class="container">
+    <nav class="menu ">
+      <a class="menu-info properties-menu-black-h4" href="#">Информация</a>
+      <a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a>
+      <a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="img/logo.png" alt=""></a><!--добавить картинку логотипа menu-logo.png-->
+      <a class="menu-info properties-menu-black-h4" href="#">Карта штата</a>
+      <a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a>
+    </nav>
+  </header>
+  <main class="container">
+    <div class="card"><!--блок с картинкой Welcome-->
+      <figure class="card-welcome">
+        <img src="img/welcome-text.png" alt="Welcome">
+        <img src="img/background-1.jpg" alt="Welcome">
+      </figure>
+    </div>
+    <div class="about"><!--блок с описанием седоны-->
+      <h3 class="properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
+      <h4 class="properties-black-h4">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h4>
+    </div>
+    <div class="city"><!--блок Настоящий городок с картинкой-->
+      <div class="city-description">
+        <h3 class="properties-white-h3">Настоящий городок</h3>
+        <p class="properties-white-h4">-№1-</p>
+        <p class="properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      </div>
+      <div class="city-sedona">
+        <figure class="city-view">
+          <img src="img/pic-real-city.jpg" alt="Седона"><!--поставить ссылку на картинку в блоке -->
         </figure>
       </div>
-      <div class="about"><!--блок с описанием седоны-->
-        <h3 class="properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
-        <h4 class="properties-gray-h4">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h4>
+    </div>
+    <div class="pluses"><!-- блок с жильем, едой, сувенирами -->
+      <div class="pluses-block pluses-housing">
+        <h3 class="properties-black-h3">Жилье</h3>
+        <p class="pluses-block-motel properties-black-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </div>
-      <div class="city"><!--блок Настоящий городок с картинкой-->
-        <div class="city-description">
-          <h3 class="properties-white-h3">Настоящий городок</h3>
-          <h4 class="properties-white-h4">-№1-</h4>
-          <h4 class="properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</h4>
-        </div>
-        <div class="city-sedona">
-          <figure class="city-view">
-            <img src="#" alt="Седона"><!--поставить ссылку на картинку в блоке -->
-          </figure>
-        </div>
+      <div class="pluses-block pluses-food">
+        <h3 class="properties-black-h3">Еда</h3>
+        <p class="pluses-block-about properties-black-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </div>
-      <div class="pluses"><!-- блок с жильем, едой, сувенирами -->
-        <div class="pluses-block pluses-housing">
-          <h3 class="properties-black-h3">Жилье</h3>
-          <p class="pluses-block-motel properties-gray-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </div>
-        <div class="pluses-block pluses-food">
-          <h3 class="properties-black-h3">Еда</h3>
-          <p class="pluses-block-about properties-gray-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </div>
-        <div class="pluses-block pluses-souvenirs">
-          <h3 class="properties-black-h3">Сувениры</h3>
-          <p class="pluses-block-about properties-gray-h4">Не только китайского, но и местного производства!</p>
-        </div>
+      <div class="pluses-block pluses-souvenirs">
+        <h3 class="properties-black-h3">Сувениры</h3>
+        <p class="pluses-block-about properties-black-h4">Не только китайского, но и местного производства!</p>
       </div>
-      <div class="roсks"><!-- блок со скалами, мост дьявола -->
-        <figure class="roсks-view">
-          <img src="#" alt="Седона">
-        </figure>
-        <div class="roсks-description">
-          <h3 class="properties-white-h3">Там есть мост дьявола</h3>
-          <h4 class="properties-white-h4">-№2-</h4>
-          <h4 class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</h4>
-        </div>
+    </div>
+    <div class="roсks"><!-- блок со скалами, мост дьявола -->
+      <figure class="roсks-view">
+        <img src="#" alt="Седона">
+      </figure>
+      <div class="roсks-description">
+        <h3 class="properties-white-h3">Там есть мост дьявола</h3>
+        <p class="properties-white-h4">-№2-</p>
+        <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
-      <div class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
-        <div class="pluses-block pluses-number pluses-square">
-          <h3 class="properties-black-h3">Небольшая площадь</h3>
-          <p class="pluses-block-subtitle properties-gray-h4">-№3-</p>
-          <p class="pluses-block-about properties-gray-h4">Все достопримечательности находятся очень близко</p>
-        </div>
-        <div class="pluses-block pluses-number pluses-road">
-          <h3 class="properties-black-h3">Красивая дорога</h3>
-          <p class="pluses-block-subtitle properties-gray-h4">-№4-</p>
-          <p class="pluses-block-about properties-gray-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="pluses-block pluses-number pluses-tourist">
-          <h3 class="properties-black-h3">Мало туристов</h3>
-          <p class="pluses-block-subtitle properties-gray-h4">-№5-</p>
-          <p class="pluses-block-about properties-gray-h4">Большинство едет в Гранд Каньон и толпится там</p>
-        </div>
+    </div>
+    <div class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
+      <div class="pluses-block pluses-number pluses-square">
+        <h3 class="properties-black-h3">Небольшая площадь</h3>
+        <p class="pluses-block-subtitle properties-black-h4">-№3-</p>
+        <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
       </div>
-      <div class="map"><!-- БЛОК с картой -->
-        <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
-          <img src="#" alt="Карта Седоны">
-        </figure>
-        <div class="map-screenshot">
-        </div><!-- блок с куском карты -->
+      <div class="pluses-block pluses-number pluses-road">
+        <h3 class="properties-black-h3">Красивая дорога</h3>
+        <p class="pluses-block-subtitle properties-black-h4">-№4-</p>
+        <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-        <!-- НАЧАЛО БЛОКА С ФОРМОЙ ПОИСКА И БРОНИ-->
-      <div class="booking">
-        <h2 class="booking-title">Заинтересовались?</h2>
-        <p class="booking-info properties-gray-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <div class="booking-block">
-          <a class="booking-btn" href="#">
-            <h3 class="properties-white-h3">Поиск гостиницы в Седоне</h3>
-<!-- добавила <h3> или достаточно прописать еще один класс в ссылку, и нужна ли она вообще здесь (ссылка)??? -->
-          </a>
-          <div class="booking-form">
-            <form method="post" action="/search">
+      <div class="pluses-block pluses-number pluses-tourist">
+        <h3 class="properties-black-h3">Мало туристов</h3>
+        <p class="pluses-block-subtitle properties-black-h4">-№5-</p>
+        <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
+      </div>
+    </div>
+    <div class="map"><!-- БЛОК с картой -->
+      <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
+        <img src="#" alt="Карта Седоны">
+      </figure>
+      <div class="map-screenshot">
+      </div><!-- блок с куском карты -->
+    </div>
+    <!-- НАЧАЛО БЛОКА С ФОРМОЙ ПОИСКА И БРОНИ-->
+    <div class="booking">
+      <h2 class="booking-title">Заинтересовались?</h2>
+      <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <div class="booking-block">
+        <a class="booking-btn" href="#">
+          <h3 class="properties-white-h3">Поиск гостиницы в Седоне</h3>
+          <!-- добавила <h3> или достаточно прописать еще один класс в ссылку, и нужна ли она вообще здесь (ссылка)??? -->
+        </a>
+        <div class="booking-form">
+          <form method="post" action="/search">
             <!--   <div class="booking-form-dates"> -->
-                <div class="booking-form-row clearfix"><!-- поле ввода дата заезда, календарь -->
-                  <label class="booking-form-label" for="booking-arrive-date">Дата заезда:</label>
-                  <input type="date" id="booking-arrive-date" required>
-                </div>
-                <div class="booking-form-row clearfix"><!-- блок ввода дата выезда, календарь -->
-                  <label class="booking-form-label" for="booking-departure-date">Дата выезда:</label>
-                  <input type="date" id="booking-departure-date" required>
-                </div>
-             <!--  </div> -->
-              <div class="booking-form-row clearfix">
-                <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
-                  <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
-                  <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
-                  <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->                  
-                  <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
-                </div>
-                <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
-                  <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
-                  <a class="booking-controls-minus" href="#"></a><!-- кнопка дети"-" -->
-                  <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
-                  <a class="booking-controls-add" href="#"></a><!-- кнопка дети"+" -->
-                </div>
+            <div class="booking-form-row clearfix"><!-- поле ввода дата заезда, календарь -->
+              <label class="booking-form-label" for="booking-arrive-date">Дата заезда:</label>
+              <input type="date" id="booking-arrive-date" required>
+            </div>
+            <div class="booking-form-row clearfix"><!-- блок ввода дата выезда, календарь -->
+              <label class="booking-form-label" for="booking-departure-date">Дата выезда:</label>
+              <input type="date" id="booking-departure-date" required>
+            </div>
+            <!--  </div> -->
+            <div class="booking-form-row clearfix">
+              <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
+                <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
+                <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
+                <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->                  
+                <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
               </div>
-              <button class="booking-form-btn" type="submit">Найти</button>
-            </form>
-          </div>
+              <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
+                <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
+                <a class="booking-controls-minus" href="#"></a><!-- кнопка дети"-" -->
+                <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
+                <a class="booking-controls-add" href="#"></a><!-- кнопка дети"+" -->
+              </div>
+            </div>
+            <button class="booking-form-btn" type="submit">Найти</button>
+          </form>
         </div>
       </div>
-        <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
-    </main>
-    <footer class="container"><!-- футер - соцсети -->
-      <p class="footer-hashtag properties-black-h3">#visitsedona</p>
-      <div class="footer-social">
-        <a class="footer-social-btn footer-social-twitter" href="#"><img src="#" alt="Twitter"></a><!-- иконка твиттера png-->
-        <a class="footer-social-btn footer-social-facebook" href="#"><img src="#" alt="VKontakte"></a><!-- иконка контакта png-->
-        <a class="footer-social-btn footer-social-youtube" href="#"><img src="#" alt="YouTube"></a><!-- иконка ютуба png-->
-      </div>
-      <div class="footer-htmlacademy">
-        <img src="#" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
-      </div>
-    </footer>
-  </body>
+    </div>
+    <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
+  </main>
+  <footer class="container"><!-- футер - соцсети -->
+    <p class="footer-hashtag properties-black-h3">#visitsedona</p>
+    <div class="footer-social">
+      <a class="footer-social-btn footer-social-twitter" href="#">Твиттер</a><!-- иконка твиттера png-->
+      <a class="footer-social-btn footer-social-facebook" href="#">ВКонтакте</a><!-- иконка контакта png-->
+      <a class="footer-social-btn footer-social-youtube" href="#">Ютуб</a><!-- иконка ютуба png-->
+    </div>
+    <div class="footer-htmlacademy">
+      <span class="footer-website-by">Website by</span>
+      <img src="img/html-academy.png" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
+    </div>
+  </footer>
+</body>
 </html>
