--- a/hotels.html
+++ b/hotels.html
@@ -11,14 +11,14 @@
   <!--добавить Фавикон-->
   <body>
     <header class="container">
-      <nav class="menu properties-menu-black-h4">
-        <a class="menu-info properties-menu-black-h4" href="index.html">Информация</a>
-        <a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a>
-        <a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="logo.png" alt=""></a>
-        <!--добавить картинку логотипа menu-logo.png-->
-        <a class="menu-info properties-menu-black-h4" href="#">Карта штата</a>
-        <a class="menu-info properties-menu-black-h4" href="hotels.html">Гостиницы</a>
-      </nav>            
+      <nav class="menu-navigator">
+      <ul>
+        <li><a class="menu-info properties-menu-black-h4" href="#">Информация</a></li>
+        <li><a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a></li>
+         <li><a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
+        <li><a class="menu-info properties-menu-black-h4" href="#">Карта штата</a></li>
+        <li><a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a></li>
+      </ul>
     </header>
     <main class="container">
       <div class="filter clearfix">
@@ -77,18 +77,18 @@
           <div class="found-about clearfix"><!-- начало блок с типом отеля и ценой -->
             <div class="found-about-houses">
               <p class="found-houses-type properties-black-h4">Гостиница</p>
-              <a class="found-houses-more" href="#">Подробнее</a>   
+              <a class="found-houses-more" href="#">Подробнее</a>
             </div>
             <div class="found-about-book">
               <p class="found-about-price properties-black-h4">от 4000 р.</p>
               <a class="found-houses-btn" href="#">Забронировать</a>
-            </div>          
+            </div>
           </div>
         </div>
       </div>
       <div class="found-houses-rating"><!-- блок с рейтингом отеля 4 звезды-->
         <div class="found-rating-stars found-ratings-good"></div> -->
-        <p class="found-rating-info properties-black-h4">Рейтинг: 8,5</p>  
+        <p class="found-rating-info properties-black-h4">Рейтинг: 8,5</p>
       </div>
     </div>
     <div class="found-houses clearfix">
@@ -101,17 +101,17 @@
           <!-- начало блок с типом отеля и ценой -->
           <div class="found-about-houses">
             <p class="found-houses-type properties-black-h4">Мотель</p>
-            <a class="found-houses-more" href="#">Подробнее</a>   
+            <a class="found-houses-more" href="#">Подробнее</a>
           </div>
           <div class="found-about-book">
             <p class="found-about-price properties-black-h4">от 3000 р.</p>
             <a class="found-houses-btn" href="#">Забронировать</a>
-          </div>          
+          </div>
         </div>
       </div>
       <div class="found-houses-rating"><!-- блок с рейтингом отеля 3 звезды-->
         <div class="found-rating-stars found-ratings-notgood"></div>
-        <p class="found-rating-info properties-black-h4">Рейтинг: 8,9</p>  
+        <p class="found-rating-info properties-black-h4">Рейтинг: 8,9</p>
       </div>
     </div>
     <div class="found-houses clearfix">
@@ -124,17 +124,17 @@
           <!-- начало блок с типом отеля и ценой -->
           <div class="found-about-houses">
             <p class="found-houses-type properties-black-h4">Апартаменты</p>
-            <a class="found-houses-more" href="#">Подробнее</a>   
+            <a class="found-houses-more" href="#">Подробнее</a>
           </div>
           <div class="found-about-book">
             <p class="found-about-price properties-black-h4">от 2000 р.</p>
             <a class="found-houses-btn" href="#">Забронировать</a>
-          </div>          
+          </div>
         </div>
       </div>
       <div class="found-houses-rating"><!-- блок с рейтингом отеля 2 звезды-->
         <div class="found-rating-stars found-ratings-bad"></div><!-- как сделать звезды??? картинка со звездами или они меняют цвет при наведении hover и нажатии??? -->
-        <p class="found-rating-info properties-black-h4">Рейтинг: 9,2</p>  
+        <p class="found-rating-info properties-black-h4">Рейтинг: 9,2</p>
       </div>
     </div>
   </main>
@@ -145,10 +145,10 @@
       <a class="footer-social-btn footer-social-facebook" href="#">ВКонтакте</a><!-- иконка контакта png-->
       <a class="footer-social-btn footer-social-youtube" href="#">Ютуб</a><!-- иконка ютуба png-->
     </div>
-    <div class="footer-htmlacademy">
+    <!-- <div class="footer-htmlacademy">
       <span class="footer-website-by">Website by</span>
-      <img src="img/html-academy.png" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
-    </div>
-  </footer>  
+      <img src="img/html-academy.png" alt="HTMLacademy">
+    </div> -->
+  </footer>
 </body>
 </html>
