--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 </head>
 <body>
   <header class="container">
-    <nav class="menu ">
-      <a class="menu-info properties-menu-black-h4" href="#">Информация</a>
-      <a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a>
-      <a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="img/logo.png" alt=""></a><!--добавить картинку логотипа menu-logo.png-->
-      <a class="menu-info properties-menu-black-h4" href="#">Карта штата</a>
-      <a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a>
+    <nav class="menu-navigator">
+      <ul>
+        <li><a class="menu-info properties-menu-black-h4" href="#">Информация</a></li>
+        <li><a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a></li>
+         <li><a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
+        <li><a class="menu-info properties-menu-black-h4" href="#">Карта штата</a></li>
+        <li><a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a></li>
+      </ul>
     </nav>
   </header>
   <main class="container">
     <div class="card"><!--блок с картинкой Welcome-->
-      <figure class="card-welcome">
-        <img src="img/welcome-text.png" alt="Welcome">
-        <img src="img/background-1.jpg" alt="Welcome">
+      <figure>
+        <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
+        <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
       </figure>
     </div>
     <div class="about"><!--блок с описанием седоны-->
@@ -116,7 +118,7 @@
               <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
                 <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
                 <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
-                <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->                  
+                <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->
                 <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
               </div>
               <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
@@ -140,10 +142,10 @@
       <a class="footer-social-btn footer-social-facebook" href="#">ВКонтакте</a><!-- иконка контакта png-->
       <a class="footer-social-btn footer-social-youtube" href="#">Ютуб</a><!-- иконка ютуба png-->
     </div>
-    <div class="footer-htmlacademy">
+    <!-- <div class="footer-htmlacademy">
       <span class="footer-website-by">Website by</span>
-      <img src="img/html-academy.png" alt="HTMLacademy"><!--вставить картинку website htmlacademy из макета -->
-    </div>
+      <img src="img/html-academy.png" alt="HTMLacademy">
+    </div> -->
   </footer>
 </body>
 </html>
