--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a class="menu-info properties-menu-black-h4" href="#">Информация</a></li>
         <li><a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a></li>
-         <li><a class="menu-info properties-menu-black-h4" href="index.html" class="menu-logo"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
+         <li><a class="menu-info menu-logo properties-menu-black-h4" href="index.html"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
         <li><a class="menu-info properties-menu-black-h4" href="#">Карта штата</a></li>
         <li><a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a></li>
       </ul>
@@ -29,11 +29,12 @@
         <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
       </figure>
     </div>
-    <div class="about"><!--блок с описанием седоны-->
-      <h3 class="properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
-      <h4 class="properties-black-h4">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h4>
-    </div>
-    <div class="city"><!--блок Настоящий городок с картинкой-->
+    <!-- /*ВСТАВИТЬ ГЕОМ ФИГУРУ НАД СЕКЦИЕЙ!!!-->
+    <section class="about clearfix"><!--блок с описанием седоны-->
+      <h3 class="about-1 properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
+      <h4 class="about-2 properties-black-h4">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h4>
+    </section>
+    <section class="city clearfix"><!--блок Настоящий городок с картинкой-->
       <div class="city-description">
         <h3 class="properties-white-h3">Настоящий городок</h3>
         <p class="properties-white-h4">-№1-</p>
@@ -44,48 +45,54 @@
           <img src="img/pic-real-city.jpg" alt="Седона"><!--поставить ссылку на картинку в блоке -->
         </figure>
       </div>
-    </div>
-    <div class="pluses"><!-- блок с жильем, едой, сувенирами -->
+    </section>
+    <section class="pluses clearfix"><!-- блок с жильем, едой, сувенирами -->
       <div class="pluses-block pluses-housing">
+        <img src="img/house.png">
         <h3 class="properties-black-h3">Жилье</h3>
         <p class="pluses-block-motel properties-black-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </div>
       <div class="pluses-block pluses-food">
+        <img src="img/hamburger.png">
         <h3 class="properties-black-h3">Еда</h3>
         <p class="pluses-block-about properties-black-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </div>
       <div class="pluses-block pluses-souvenirs">
+        <img src="img/present.png">
         <h3 class="properties-black-h3">Сувениры</h3>
         <p class="pluses-block-about properties-black-h4">Не только китайского, но и местного производства!</p>
       </div>
-    </div>
-    <div class="roсks"><!-- блок со скалами, мост дьявола -->
-      <figure class="roсks-view">
-        <img src="#" alt="Седона">
-      </figure>
+    </section>
+    <!-- блок со скалами, мост дьявола -->
+    <section class="roсks clearfix">
+      <div class="roсks-pic">
+        <figure class="roсks-view">
+          <img src="img/pic-devil-bridge.jpg" alt="Седона">
+        </figure>
+      </div>
       <div class="roсks-description">
         <h3 class="properties-white-h3">Там есть мост дьявола</h3>
         <p class="properties-white-h4">-№2-</p>
         <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
-    </div>
-    <div class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
-      <div class="pluses-block pluses-number pluses-square">
+    </section>
+    <section class="pluses pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
+      <div class="pluses-block-1 pluses-number pluses-square">
         <h3 class="properties-black-h3">Небольшая площадь</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№3-</p>
         <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
       </div>
-      <div class="pluses-block pluses-number pluses-road">
+      <div class="pluses-block-1 pluses-number pluses-road">
         <h3 class="properties-black-h3">Красивая дорога</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№4-</p>
         <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-      <div class="pluses-block pluses-number pluses-tourist">
+      <div class="pluses-block-1 pluses-number pluses-tourist">
         <h3 class="properties-black-h3">Мало туристов</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№5-</p>
         <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
       </div>
-    </div>
+    </section>
     <div class="map"><!-- БЛОК с картой -->
       <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
         <img src="#" alt="Карта Седоны">
