--- a/hotels.html
+++ b/hotels.html
@@ -94,21 +94,21 @@
           </div><!--(блок с 4000р)-->
           </div><!--(блок с гостиницей и 4000р)-->
           <div class="found-button clearfix"><!--(блок с кнопками подробнее и забронировать)-->
-            <div class="found-button-type"><!--(блок с кнопками подробнее)-->
+            <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
               <a class="found-button-more" href="#">Подробнее</a>
             </div><!--(блок с кнопками подробнее)-->
-            <div class=" found-button-type"><!--(блок с кнопками забронировать)-->
+            <div class=" found-button-type2"><!--(блок с кнопками забронировать)-->
               <a class="found-button-book" href="#">Забронировать</a>
             </div><!--(блок с кнопками забронировать)-->
           </div><!--(блок с кнопками подробнее и забронировать)-->
         </div><!--общий для отеля, гостиницей. ценой-->
       </div><!--общий для блока с рисунком и отелем-->
-      <div><!--общий для блока со звездами и рейтингом-->
-        <div><!--блок со звездами-->
-          <img src="">
+      <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
+        <div class="rating-stars"><!--блок со звездами-->
+          <img src="img/stars-4.png">
         </div><!--блок со звездами-->
-        <div><!--блок с рейтингом-->
-          <p>Рейтинг</p>
+        <div class="rating-number"><!--блок с рейтингом-->
+          <p>Рейтинг 8.5</p>
         </div><!--блок с рейтингом-->
       </div><!--общий для блока со звездами и рейтингом-->
     </div><!--общий для всех блоков-->
