--- a/hotels.html
+++ b/hotels.html
@@ -75,7 +75,7 @@
     </div>
 
 
-<!--ПРОБНЫЙ БЛОК С ОТЕЛЯМИ-->
+<!--НАЧАЛО БЛОК С ОТЕЛЕМ АМАРА-->
   <div class="found clearfix"> <!--общий для всех блоков-->
     <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
       <div class="found-houses-img"><!--блок с рисунком-->
@@ -108,14 +108,93 @@
           <img src="img/stars-4.png">
         </div><!--блок со звездами-->
         <div class="rating-number"><!--блок с рейтингом-->
-          <p>Рейтинг 8.5</p>
+          <p>Рейтинг: 8.5</p>
         </div><!--блок с рейтингом-->
       </div><!--общий для блока со звездами и рейтингом-->
     </div><!--общий для всех блоков-->
 
-<!-- </div> -->
+<!--КОНЕЦ БЛОК С ОТЕЛЕМ АМАРА-->
 
-<!--ПРОБНЫЙ БЛОК С ОТЕЛЯМИ-->
+<!--НАЧАЛО БЛОК С ОТЕЛЕМ DESERT-->
+<div class="found clearfix"> <!--общий для всех блоков-->
+    <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
+      <div class="found-houses-img"><!--блок с рисунком-->
+        <img src="img/desert-quail.jpg" alt="Desert Qual Inn">
+      </div><!--блок с рисунком-->
+      <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
+        <div class="found-houses-info"><!--(блок с названием отеля)-->
+          <a class="found-info-title properties-black-h3" href="#">Desert Qual Inn</a>
+        </div><!--(блок с названием отеля)-->
+        <div class="found-about clearfix"><!--(блок с гостиницей и 4000р)-->
+          <div class="found-houses-type"><!--(блок с гостиницей)-->
+            <p class="found-houses-type properties-black-h4">Мотель</p>
+          </div><!--(блок с гостиницей)-->
+          <div class="found-houses-price"><!--(блок с 4000р)-->
+            <p class="found-about-price properties-black-h4">от 3000 р.</p>
+          </div><!--(блок с 4000р)-->
+          </div><!--(блок с гостиницей и 4000р)-->
+          <div class="found-button clearfix"><!--(блок с кнопками подробнее и забронировать)-->
+            <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
+              <a class="found-button-more" href="#">Подробнее</a>
+            </div><!--(блок с кнопками подробнее)-->
+            <div class=" found-button-type2"><!--(блок с кнопками забронировать)-->
+              <a class="found-button-book" href="#">Забронировать</a>
+            </div><!--(блок с кнопками забронировать)-->
+          </div><!--(блок с кнопками подробнее и забронировать)-->
+        </div><!--общий для отеля, гостиницей. ценой-->
+      </div><!--общий для блока с рисунком и отелем-->
+      <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
+        <div class="rating-stars"><!--блок со звездами-->
+          <img src="img/stars-3.png">
+        </div><!--блок со звездами-->
+        <div class="rating-number"><!--блок с рейтингом-->
+          <p>Рейтинг: 8.9</p>
+        </div><!--блок с рейтингом-->
+      </div><!--общий для блока со звездами и рейтингом-->
+    </div><!--общий для всех блоков-->
+
+<!--КОНЕЦ БЛОК С ОТЕЛЕМ DESERT-->
+
+<!--НАЧАЛО БЛОК С ОТЕЛЕМ VILLAS AT POCO-->
+<div class="found clearfix"> <!--общий для всех блоков-->
+    <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
+      <div class="found-houses-img"><!--блок с рисунком-->
+        <img src="img/villas-poco.jpg" alt="Villas at Poco Diablo">
+      </div><!--блок с рисунком-->
+      <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
+        <div class="found-houses-info"><!--(блок с названием отеля)-->
+          <a class="found-info-title properties-black-h3" href="#">Villas at Poco Diablo</a>
+        </div><!--(блок с названием отеля)-->
+        <div class="found-about clearfix"><!--(блок с гостиницей и 4000р)-->
+          <div class="found-houses-type"><!--(блок с гостиницей)-->
+            <p class="found-houses-type properties-black-h4">Апартаменты</p>
+          </div><!--(блок с гостиницей)-->
+          <div class="found-houses-price"><!--(блок с 4000р)-->
+            <p class="found-about-price properties-black-h4">от 2000 р.</p>
+          </div><!--(блок с 4000р)-->
+          </div><!--(блок с гостиницей и 4000р)-->
+          <div class="found-button clearfix"><!--(блок с кнопками подробнее и забронировать)-->
+            <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
+              <a class="found-button-more" href="#">Подробнее</a>
+            </div><!--(блок с кнопками подробнее)-->
+            <div class=" found-button-type2"><!--(блок с кнопками забронировать)-->
+              <a class="found-button-book" href="#">Забронировать</a>
+            </div><!--(блок с кнопками забронировать)-->
+          </div><!--(блок с кнопками подробнее и забронировать)-->
+        </div><!--общий для отеля, гостиницей. ценой-->
+      </div><!--общий для блока с рисунком и отелем-->
+      <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
+        <div class="rating-stars"><!--блок со звездами-->
+          <img src="img/stars-2.png">
+        </div><!--блок со звездами-->
+        <div class="rating-number"><!--блок с рейтингом-->
+          <p>Рейтинг: 9.2</p>
+        </div><!--блок с рейтингом-->
+      </div><!--общий для блока со звездами и рейтингом-->
+    </div><!--общий для всех блоков-->
+
+
+<!--КОНЕЦ БЛОК С ОТЕЛЕМ VILLAS AT POCO-->
 
 
 
