--- a/hotels.html
+++ b/hotels.html
@@ -4,25 +4,23 @@
   <meta charset="utf-8">
   <title>Отели - Седоны</title>
   <meta name="description" content="Отдых в мотелях, гостиницах, апартаментах. Бассейн, парковка, wi-fi, завтрак, все включено.">
-  <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
+  <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых">
   <link rel="stylesheet" href="css/style.css">
-  <!--добавить ссылку на Стили-->
   <link rel="icon" href="#" type="image/x-icon">
   <!--добавить Фавикон-->
 </head>
   <body>
-    <header class="container">
+    <header>
       <nav class="menu-navigator">
       <ul>
         <li><a class="menu-info properties-menu-black-h4" href="#">Информация</a></li>
         <li><a class="menu-info properties-menu-black-h4" href="#">Фото и видео</a></li>
-         <li><a class="menu-info menu-logo properties-menu-black-h4" href="index.html"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
+         <li><a class="menu-info menu-logo properties-menu-black-h4" href="index.html"><img src="img/logo.png" alt="Sedona-hotels"></a></li>
         <li><a class="menu-info properties-menu-black-h4" href="#">Карта штата</a></li>
         <li><a class="menu-info properties-menu-black-h4" href="catalog.html">Гостиницы</a></li>
       </ul>
     </header>
-    <main class="container-hotels">
-    <!--НЕ МОГУ ВСТАВИТЬ БЭКГРАУНД В ФОРМУ!!!-->
+    <main class="hotels">
       <div class="background-filter">
         <section class="filter clearfix">
           <form method="post" action="/">
@@ -57,7 +55,6 @@
           </form>
         </section>
       </div>
-
       <!-- блок с сортировкой и стреклками-->
       <div class="search clearfix">
       <div class="search-left-size">
@@ -73,7 +70,6 @@
         <a class="search-down" href="#"></a>
       </div>
     </div>
-
 
 <!--НАЧАЛО БЛОК С ОТЕЛЕМ АМАРА-->
   <div class="found clearfix"> <!--общий для всех блоков-->
@@ -112,7 +108,6 @@
         </div><!--блок с рейтингом-->
       </div><!--общий для блока со звездами и рейтингом-->
     </div><!--общий для всех блоков-->
-
 <!--КОНЕЦ БЛОК С ОТЕЛЕМ АМАРА-->
 
 <!--НАЧАЛО БЛОК С ОТЕЛЕМ DESERT-->
@@ -152,7 +147,6 @@
         </div><!--блок с рейтингом-->
       </div><!--общий для блока со звездами и рейтингом-->
     </div><!--общий для всех блоков-->
-
 <!--КОНЕЦ БЛОК С ОТЕЛЕМ DESERT-->
 
 <!--НАЧАЛО БЛОК С ОТЕЛЕМ VILLAS AT POCO-->
@@ -192,24 +186,10 @@
         </div><!--блок с рейтингом-->
       </div><!--общий для блока со звездами и рейтингом-->
     </div><!--общий для всех блоков-->
-
-
 <!--КОНЕЦ БЛОК С ОТЕЛЕМ VILLAS AT POCO-->
 
-
-
-
-
-
-
-
-
-
-
-
-
   </main>
-  <footer class="container">
+  <footer>
     <p class="footer-hashtag properties-black-h3">#visitsedona</p>
     <div class="footer-social">
     <a class="footer-social-btn footer-social-twitter" href="#">Твиттер</a><!-- иконка твиттера png-->
@@ -221,5 +201,5 @@
       <img src="img/html-academy.png" alt="HTMLacademy">
     </div> -->
   </footer>
-</body>
+ </body>
 </html>
