--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--добавить Фавикон-->
 </head>
 <body>
-  <header class="container">
+  <header>
     <nav class="menu-navigator">
       <ul>
         <li><a class="menu-info properties-menu-black-h4" href="#">Информация</a></li>
@@ -22,7 +22,7 @@
       </ul>
     </nav>
   </header>
-  <main class="container">
+  <main>
     <div class="card"><!--блок с картинкой Welcome-->
       <figure>
         <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
@@ -93,56 +93,45 @@
         <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </section>
-    <div class="map"><!-- БЛОК с картой -->
-      <figure class="map-image"><!-- прямоугольный (пустой) блок под карту -->
-        <img src="#" alt="Карта Седоны">
-      </figure>
-      <div class="map-screenshot">
-      </div><!-- блок с куском карты -->
-    </div>
     <!-- НАЧАЛО БЛОКА С ФОРМОЙ ПОИСКА И БРОНИ-->
-    <div class="booking">
-      <h2 class="booking-title">Заинтересовались?</h2>
-      <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <div class="booking-block">
-        <a class="booking-btn" href="#">
-          <h3 class="properties-white-h3">Поиск гостиницы в Седоне</h3>
-          <!-- добавила <h3> или достаточно прописать еще один класс в ссылку, и нужна ли она вообще здесь (ссылка)??? -->
-        </a>
-        <div class="booking-form">
-          <form method="post" action="/search">
-            <!--   <div class="booking-form-dates"> -->
-            <div class="booking-form-row clearfix"><!-- поле ввода дата заезда, календарь -->
-              <label class="booking-form-label" for="booking-arrive-date">Дата заезда:</label>
-              <input type="date" id="booking-arrive-date" required>
-            </div>
-            <div class="booking-form-row clearfix"><!-- блок ввода дата выезда, календарь -->
-              <label class="booking-form-label" for="booking-departure-date">Дата выезда:</label>
-              <input type="date" id="booking-departure-date" required>
-            </div>
-            <!--  </div> -->
-            <div class="booking-form-row clearfix">
-              <div class="booking-form-col booking-col-adult clearfix"><!-- блок ввода количества взрослых -->
-                <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
-                <a class="booking-controls-minus" href="#"></a><!-- кнопка взрослые"-" -->
-                <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->
-                <a class="booking-controls-add" href="#"></a><!-- кнопка взрослые"+" -->
-              </div>
-              <div class="booking-form-col booking-col-kids clearfix"><!-- блок ввода количества детей -->
-                <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
-                <a class="booking-controls-minus" href="#"></a><!-- кнопка дети"-" -->
-                <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
-                <a class="booking-controls-add" href="#"></a><!-- кнопка дети"+" -->
-              </div>
-            </div>
-            <button class="booking-form-btn" type="submit">Найти</button>
-          </form>
-        </div>
+    <section class="interest-blok">
+      <div class="booking">
+        <h2 class="booking-title">Заинтересовались?</h2>
+        <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a class="search-btn" href="#">Поиск гостиницы в седоне</a>
       </div>
-    </div>
+    </section>
+    <section class="map">
+      <form method="post" action="/search">
+        <label class="booking-arrive" for="booking-arrive-date">Дата заезда:
+          <a class="arrive-cal" href="#"><span class="icon-calendar"></span></a>
+        </label>
+        <input type="text" name="date-of-arrive" value="24 апреля 2017" id="booking-arrive-date">
+        <label class="booking-departure" for="booking-departure-date">Дата выезда:
+          <a class="departure-cal" href="#"><span class="icon-calendar"></span></a>
+        </label>
+        <input type="text" name="date-of-departure" value="4 июля 2017" id="booking-departure-date">
+        <div class="people">
+          <label class="booking-form-label" for="booking-audit-adult">Взрослые:</label>
+          <button type="button" name="minus-adult"><span class="icon-minus"></span></button><!-- кнопка взрослые"-" -->
+          <input type="text" id="booking-audit-adult" value="2" required><!-- выбрано в поле 2 чел -->
+          <button type="button" name="plus-adult"><span class="icon-plus"></span></button><!-- кнопка взрослые"+" -->
+              <!-- ввод количества детей -->
+          <label class="booking-form-label" for="booking-audit-kids">Дети:</label>
+          <button type="button" name="minus-children"><span class="icon-minus"></span></button><!-- кнопка дети"-" -->
+          <input type="text" id="booking-audit-kids" value="0" required><!-- выбрано в поле 0 чел -->
+          <button type="button" name="plus-children"><span class="icon-plus"></span></button><!-- кнопка дети"+" -->
+        </div>
+        <button class="booking-form-btn" type="submit">Найти</button>
+      </form>
+    </section>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
+    </iframe>
     <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
+
+
   </main>
-  <footer class="container"><!-- футер - соцсети -->
+  <footer><!-- футер - соцсети -->
     <p class="footer-hashtag properties-black-h3">#visitsedona</p>
     <div class="footer-social">
       <a class="footer-social-btn footer-social-twitter" href="#">Твиттер</a><!-- иконка твиттера png-->
@@ -154,5 +143,5 @@
       <img src="img/html-academy.png" alt="HTMLacademy">
     </div> -->
   </footer>
-</body>
+ </body>
 </html>
