--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <main>
     <div class="card"><!--блок с картинкой Welcome-->
-      <figure>
+      <figure class="card-welcome-sedona">
         <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
         <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
       </figure>
